[master] Obtaining and displaying yaml\env config
